$Id$


v0.51.1		21-Feb-2004

	upgrade:
		In all message groups set check/set default character set.
		In all message areas set the character set to use with the
		global editor (to Latin-1 for example). Local and netmail
		areas must be done by hand because they are most likely not
		in a group.
		The macro templates are updated, you may want to install the
		new ones.

	SETUP.sh:
		Changed to support Darwin (OS X). Note that in earlier days
		mbse did compile under OS X, but things are different since
		then. Work is underway to let it compile and run again.
		
	mbsetup:
		In edit message groups added setup for default character set.
		In edit message areas added setup for character set for the
		area. Also added global edit for character set.
		In several places where groups need to be tagged, there is now
		a switch (*) to select/deselect all groups at once.
		In the user editor the sex is now changed with the spacebar to
		prevent typing errors.
		In the user editor added character set edit in the second
		screen.
		Removed users fullscreen chat setting, not used.
		Added menu setup for change character set, menu 321.

	mbsebbs:
		Writes the ^aCHRS: kludge again in new created messages.
		Changed ^aPID to include OS and CPU.
		Added user selecting a character set, menu 321.
		Added login check to see if user has a valid character set.
		Added Control-U 9 to display file to show the users character
		set in the menus screens.
		Added experimental characterset translation to message read.
		This will translate the message character set used to the users
		character set. When translation is impossible a ? is printed.
		After problems with iconv, switched to use code from Martin
		Junius Fidogate package.
		In delete file in home directory the Y/N keys were read from
		the wrong language prompt.

	mbmsg:
		Writes the ^aCHRS: kludge again in new created messages.
		Changed ^aPID to include OS and CPU.

	mbaff: